crates/milli/src/search/facet/snapshots/facet_sort_ascending.rs/filter_sort_ascending_multiple_field_ids/1-1.snap
---
source: crates/milli/src/search/facet/facet_sort_ascending.rs
---
[203, 205, 207, 209, 211, 213, 219, 223, 225, 227, 231, 233, 241, 243, 247, 251, 257, 263, 265, 267, 269, 277, 279, 281, 293, 295, 297, ]
[202, ]
[204, ]
[216, ]
[226, ]
[228, ]
[244, ]
[250, ]
[256, ]
[260, ]
[262, ]
[264, ]
[278, ]
[280, ]
[282, ]
[286, ]
[292, ]
[208, ]
[210, ]
[220, ]
[224, ]
[232, ]
[236, ]
[238, ]
[242, ]
[252, ]
